# claudeline

./: .gitignore  Cargo.toml  README.md  README.md.bak2
.github/workflows/: ci.yml  release.yml
benches/: render.rs
npm/: README.md  index.js  install.js  package.json
npm/scripts/: install.js
scripts/: install.sh
src/: cli.rs  main.rs
src/config/: mod.rs
src/tui/: mod.rs
src/widgets/: custom_command.rs  git_branch.rs  git_status.rs
tests/: config_tests.rs  integration_tests.rs  widget_tests.rs
