[package]
name = "claudeline"
version = "1.0.0"
edition = "2024"
description = "A high-performance, customizable status line for Claude Code CLI"
license = "MIT"
repository = "https://github.com/mstuart/claudeline"
keywords = ["claude-code", "statusline", "terminal", "cli", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
unicode-width = "0.2"
dirs = "6"
ratatui = "0.29"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "render"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
